<resources>
    <string name="app_name">NasaApplication</string>

    <string name="photo_of_the_day_text">"Фотография дня" от </string>
    <string name="photo_of_the_day_stub">Фотография дня</string>
    <string name="input_wiki_field_hint">Найти в Википедии</string>
    <string name="input_wiki_field_text">Поищите интересный термин в Википедии</string>
    <string name="input_nasa_field_hint">Найти в архиве NASA</string>
    <string name="input_nasa_field_text">Поищите событие в архиве NASA</string>

    <!-- Переменные для сообщений об ошибках -->
    <string name="error">Ошибка</string>
    <string name="error_no_api_key">Вам нужен API-ключ</string>
    <string name="error_unknown">Неизвестная ошибка.</string>
    <string name="error_empty_download_dates">По Вашему запросу ничего не найдено.</string>
    <string name="error_need_api_key">Вам нужен API-ключ.</string>
    <string name="error_wiki_empty_request">\u003cBr>\u003cBr>Информацию найти не удалось.\u003cBr>\u003cBr>Попробуйте переформулировать\u003cBr>Ваш запрос.</string>
    <string name="unknown_type_source_favorite_data">Не правильный тип данных.</string>
    <string name="error_underline_creation_for_title">Конечная позиция символов для подчёркивания должна быть больше, чем их начальная позиция.</string>
    <string name="error_empty_link">Ссылка пуста.</string>

    <!-- Переменные для сообщений о совершённых действия -->
    <string name="info_added_item_in_favorite_list">В Ваш список добавлена новая запись:</string>
    <string name="info_deleted_item_from_favorite_list">Из Вашего списка удалена запись:</string>

    <string name="bottom_sheet_description_title_text" />
    <string name="bottom_sheet_description_text_text" />
    <string name="action_bottom_bar_settings_title">Настройки</string>
    <string name="action_bottom_bar_save_title">Сохранить</string>
    <string name="action_bottom_bar_search_title">Поиск</string>
    <string name="fragment_day_photo_current_date_text_view_text">\"Фотография дня\" от 21.10.2021</string>
    <string name="button_before_yesterday_photo_text">Позавчера</string>
    <string name="button_yesterday_photo_text">Вчера</string>
    <string name="button_today_photo_text">Сегодня</string>
    <string name="button_style_day_text">Дневная тема</string>
    <string name="button_style_night">Ночная тема</string>
    <string name="action_bottom_bar_photo_of_day_title">Фотография дня</string>
    <string name="tablayout_photo_of_day_icon_text">Фото дня</string>
    <string name="tablayout_search_in_wiki_icon_text">Поиск</string>

    <string name="tablayout_search_in_wiki_icon_title">Фотография дня</string>
    <string name="action_bottom_bar_search_to_wiki_title">Поиск в Википедии</string>
    <string name="action_bottom_bar_search_to_nasa_archive_title">Поиск в архиве NASA</string>

    <string name="action_bottom_bar_navigation_to_archive_title">Перейти в архив</string>
    <string name="action_bottom_bar_navigation_to_send_title">Перейти к отправке</string>
    <string name="action_bottom_bar_add_to_favorite_title">Добавить в избранное</string>
    <string name="tablayout_search_in_nasa_archive_text">Архив</string>
    <string name="search_in_nasa_archive_image_view_description" />
    <string name="search_in_nasa_archive_title_text_view" />
    <string name="search_in_nasa_archive_description_text_view_text" />
    <string name="fragment_search_in_nasa_archive_recycler_item_text_view_text" />
    <string name="nasa_archive_entity_list_container_title_text">Найденные события (факты):</string>
    <string name="action_bottom_bar_search_request_form_title">Поиск в избранном</string>
    <string name="action_bottom_bar_open_favorite_list_title">Открыть список избранного</string>
    <string name="recycler_item_photo_of_day_item_title_text" />
    <string name="recycler_item_photo_of_day_item_description_text" />
    <string name="recycler_item_search_in_wiki_item_title_text" />
    <string name="recycler_item_search_in_wiki_item_description_text" />
    <string name="recycler_item_search_in_nasa_item_title_text" />
    <string name="recycler_item_search_in_nasa_item_description_text" />
</resources>