<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnBackground">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?actionBarSize"
            android:paddingStart="@dimen/main_constraint_layout_padding_start"
            android:paddingEnd="@dimen/main_constraint_layout_padding_end">

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/fragment_day_photo_top_barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="button_before_yesterday_photo, button_today_photo, button_today_photo"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/button_before_yesterday_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/convergence"
                android:text="@string/button_before_yesterday_photo_text"
                android:textAllCaps="true"
                android:textColor="?attr/colorOnPrimary"
                app:chipBackgroundColor="?attr/colorSecondaryVariant"
                app:layout_constraintEnd_toStartOf="@+id/button_yesterday_photo"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:rippleColor="?attr/colorPrimaryVariant" />

            <com.google.android.material.chip.Chip
                android:id="@+id/button_yesterday_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/convergence"
                android:text="@string/button_yesterday_photo_text"
                android:textAllCaps="true"
                android:textColor="?attr/colorOnPrimary"
                app:chipBackgroundColor="?attr/colorSecondaryVariant"
                app:layout_constraintEnd_toStartOf="@+id/button_today_photo"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_before_yesterday_photo"
                app:layout_constraintTop_toTopOf="parent"
                app:rippleColor="?attr/colorPrimaryVariant" />

            <com.google.android.material.chip.Chip
                android:id="@+id/button_today_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/convergence"
                android:text="@string/button_today_photo_text"
                android:textAllCaps="true"
                android:textColor="?attr/colorOnPrimary"
                app:chipBackgroundColor="?attr/colorSecondaryVariant"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_yesterday_photo"
                app:layout_constraintTop_toTopOf="parent"
                app:rippleColor="?attr/colorPrimaryVariant" />

            <TextView
                android:id="@+id/fragment_day_photo_current_date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aldrich"
                android:text="@string/fragment_day_photo_current_date_text_view_text"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="@dimen/fragment_day_photo_current_date_text_view_text_size"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/fragment_day_photo_current_date_text_view_margin_top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_day_photo_top_barrier" />

            <FrameLayout
                android:id="@+id/p_o_d_loading_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/p_o_d_image_view"
                app:layout_constraintEnd_toEndOf="@id/p_o_d_image_view"
                app:layout_constraintStart_toStartOf="@id/p_o_d_image_view"
                app:layout_constraintTop_toTopOf="@id/p_o_d_image_view">

                <ProgressBar
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:indeterminateDrawable="@drawable/progress_bar_spinner"
                    android:indeterminateOnly="true" />
                <!--android:indeterminateTint="@color/white"/>-->
            </FrameLayout>

            <com.example.nasaapplication.ui.utils.LoadedImageView
                android:id="@+id/p_o_d_image_view"
                android:layout_width="@dimen/p_o_d_image_view_zero_width"
                android:layout_height="match_parent"
                android:contentDescription="@string/photo_of_the_day_stub"
                android:layout_marginTop="@dimen/p_o_d_image_view_margin_top"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fragment_day_photo_current_date_text_view"
                app:layout_constraintWidth_percent="1" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <include
        layout="@layout/bottom_sheet_layout" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>

